@@ -1,3 +1,7 @@
+2012-12-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c (tape_action): Do not count free tape space if
+	  exceed max-dle-by-volume.
+
 2012-12-18  Jean-Louis Martineau <martineau@zmanda.com>
 	* NEWS, ReleaseNotes: Changes in 3.3.3
 
